syntax = "proto3";

package m3api;

message PointMsg {
    sint32 x = 2;
    sint32 y = 3;
    sint32 z = 4;
}

message ConnectionMsg {
    sint32 conn_id = 1;
    PointMsg vector = 2;
    int64 ds = 3;
}

message TrioMsg {
    int32 trio_id = 1;
    repeated sint32 conn_ids = 2;
}

message GrowthContextMsg {
    int32 growth_context_id = 1;
    int32 growth_type = 2;
    int32 growth_index = 3;
}

message CubeOfTrioMsg {
    int32 cube_id = 1;
    int32 growth_context_id = 2;
    int32 center_trio_id = 3;
    repeated int32 center_faces_trio_ids = 4;
    repeated int32 middle_edges_trio_ids = 5;
}

message RootPathNodeBuilderMsg {
    int32 cube_id = 1;
    int32 trio_id = 2;
    repeated IntermediatePathNodeBuilderMsg inter_node_builders = 3;
}

message IntermediatePathNodeBuilderMsg {
    int32 cube_id = 1;
    int32 trio_id = 2;
    sint32 link1_conn_id = 3;
    LastPathNodeBuilderMsg last_node_builder1 = 4;
    sint32 link2_conn_id = 5;
    LastPathNodeBuilderMsg last_node_builder2 = 6;
}

message LastPathNodeBuilderMsg {
    int32 cube_id = 1;
    int32 trio_id = 2;
    sint32 next_main_conn_id = 3;
    sint32 next_inter_conn_id = 4;
}

