syntax = "proto3";

package m3api;

import "m3point.proto";

message SpaceRequestMsg {
    string space_name = 1;
    int32 active_path_node_threshold = 2;
    int32 max_trios_per_point = 3;
    int32 max_path_nodes_per_point = 4;
}

message SpaceResponseMsg {
    int32 space_id = 1;
}

message EventRequestMsg {
    int32 space_id = 1;
    int32 growth_type = 2;
    int32 growth_index = 3;
    int32 growth_offset = 4;
    int32 creation_time = 5;
    PointMsg center = 6;
    uint32 color = 7;
}

message NodeMsg {
    int32 event_id = 1;
    PointMsg point = 2;
    int32 d = 3;
    int32 trio_id = 4;
    uint32 connection_mask = 5;
}

message EventResponseMsg {
    int32 event_id = 1;
    int64 path_ctx_id = 2;
    NodeMsg root_node = 3;
}

message NextTimeRequestMsg {
    int32 space_id = 1;
    int32 current_time = 2;
}

message NextTimeResponseMsg {
    int32 space_id = 1;
    int32 current_time = 2;
    repeated NodeMsg active_nodes = 3;
}

